fix(textfield): better naming, fix spacing, add test
affects: @fremtind/jkl-core, @fremtind/jkl-text-input-react, @fremtind/jkl-text-input

fix when to show error or help

--- a/packages/core/help-text.scss
+++ b/packages/core/help-text.scss
@@ -1,17 +1,15 @@
 @import "./variables/all";
 @import "./mixins/all";
 
-.jkl {
-    &__text {
-        display: block;
-        margin-top: $component-spacing--large;
-        @include font-size(small);
+.jkl-form-support-text {
+    display: block;
+    margin-top: $component-spacing--large;
+    @include font-size(small);
 
-        &--help {
-            color: $svart;
-        }
-        &--error {
-            color: $error-color;
-        }
+    &--help {
+        color: $svart;
+    }
+    &--error {
+        color: $error-color;
     }
 }
